# ShowcaseEngine

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.json
.claude/skills/commit-push/: SKILL.md
app/: CMakeLists.txt  main.cpp
assets/scenes/: cornell_box.scene  sponza.scene  test.scene
cmake/: CompilerWarnings.cmake  Dependencies.cmake  EditorIncludeGuard.cmake  ShaderCompilation.cmake
docs/: ARCHITECTURE.md  CODING_CONVENTION.md  LIGHTING_ROADMAP.md  OBS_FRAME_STUTTER.md  POINT_SHADOW_DEBUG_PLAN.md  SHADOW_DEBUG_PLAN.md  SPOT_SHADOW_DEBUG_PLAN.md
docs/culling/: PROGRESS.md  TECH_SPEC.md
editor/: CMakeLists.txt
editor/include/showcase/editor/: AssetBrowserPanel.h  CommandHistory.h  Console.h  EditorApp.h  EditorController.h  ImGuiLayer.h  NativeDialog.h  ViewportPanel.h
editor/src/: AssetBrowserPanel.cpp  CommandHistory.cpp  Console.cpp  EditorApp.cpp  EditorController.cpp  ImGuiLayer.cpp  Main.cpp  NativeDialog.cpp  ViewportPanel.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/showcase/core/: Application.h  Assert.h  EntryPoint.h  FPSCameraController.h  FileSystem.h  Input.h  JsonDocument.h  Log.h  LogListener.h  Math.h  Platform.h  Profiler.h  Timer.h  Window.h
engine/include/showcase/demo/: IShowcase.h  ShowcaseManager.h  ShowcaseRegistry.h
engine/include/showcase/graphics/: AssetManager.h  Buffer.h  Camera.h  CommandList.h  CommandQueue.h  CubemapDepthBuffer.h  DepthBuffer.h  DescriptorHeap.h  Device.h  FrameResource.h  Model.h  ModelCache.h  OffscreenTarget.h  PipelineState.h  RenderContext.h  RenderTarget.h  RootSignature.h  Scene.h  SceneRenderer.h  ShaderManager.h  SwapChain.h  Texture.h
engine/include/showcase/ui/: Console.h  EditorController.h  ImGuiLayer.h  LogConsole.h  OverlaySystem.h  Viewport.h
engine/shaders/: .clang-format  cubemap_preview_ps.hlsl  depth_utils.hlsli  frustum_debug_vs.hlsl  grid_ps.hlsl  grid_vs.hlsl  light_gizmo_vs.hlsl  mesh_ps.hlsl  mesh_vs.hlsl  object_id_ps.hlsl  outline_ps.hlsl  outline_vs.hlsl  point_shadow_depth_heatmap_ps.hlsl  point_shadow_face_overlay_ps.hlsl  point_shadow_overlay_ps.hlsl  shadow_debug_ps.hlsl  shadow_overlay_ps.hlsl  spot_attenuation_overlay_ps.hlsl  spot_light_gizmo_vs.hlsl  spot_shadow_overlay_ps.hlsl  spot_shadow_preview_ps.hlsl
engine/src/core/: Application.cpp  FPSCameraController.cpp  FileSystem.cpp  Input.cpp  JsonDocument.cpp  Log.cpp  Platform.cpp  Timer.cpp  Window.cpp
engine/src/demo/: ShowcaseManager.cpp  ShowcaseRegistry.cpp
engine/src/graphics/: AssetManager.cpp  Buffer.cpp  Camera.cpp  CommandList.cpp  CommandQueue.cpp  CubemapDepthBuffer.cpp  DepthBuffer.cpp  DescriptorHeap.cpp  Device.cpp  FrameResource.cpp  Model.cpp  ModelCache.cpp  OffscreenTarget.cpp  PipelineState.cpp  RenderContext.cpp  RenderTarget.cpp  RootSignature.cpp  Scene.cpp  SceneRenderer.cpp  ShaderManager.cpp  SwapChain.cpp  Texture.cpp
engine/src/ui/: Console.cpp  EditorController.cpp  ImGuiLayer.cpp  LogConsole.cpp  OverlaySystem.cpp  Viewport.cpp
scripts/: build.bat  check_editor_includes.ps1
showcases/: CMakeLists.txt
showcases/01_hello_triangle/: CMakeLists.txt  HelloTriangleShowcase.cpp  HelloTriangleShowcase.h
showcases/01_hello_triangle/shaders/: triangle_ps.hlsl  triangle_vs.hlsl
showcases/02_culling_optimization/: CMakeLists.txt  CONTENT_PLAN.md  CullingShowcase.cpp  CullingShowcase.h  FPSCameraController.cpp  PROGRESS.md  TECH_SPEC.md
showcases/02_culling_optimization/shaders/: mesh_ps.hlsl  mesh_vs.hlsl
